# napari-hydra-image-processor

./: README.md  requirements.txt  setup.cfg  tox.ini
.napari/: config.yml
docs/: demo.ipynb
src/napari_hydra_image_processor/: __init__.py  _function.py  _hydra_image_processing.py
src/napari_hydra_image_processor/_tests/: test_function.py
