[metadata]
name = napari-hydra-image-processor
version = 0.1.0
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-hydra-image-processor
license = BSD-3-Clause
description = Process images using Hydra Image Processor and CUDA-compatible graphics cards in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-hydra-image-processor/issues
    Documentation = https://github.com/haesleinhuepf/napari-hydra-image-processor#README.md
    Source Code = https://github.com/haesleinhuepf/napari-hydra-image-processor
    User Support = https://github.com/haesleinhuepf/napari-hydra-image-processor/issues

[options]
packages = find:
python_requires = >=3.9
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy~=1.22
    napari-tools-menu>=0.1.17
    napari-time-slicer
    napari-assistant>=0.3.10
    stackview>=0.3.2

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-hydra-image-processor = napari_hydra_image_processor
